WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160977
[Cocoa] API::Number needs to be wrapped by an NSNumber
https://bugs.webkit.org/show_bug.cgi?id=160977
Summary
[Cocoa] API::Number needs to be wrapped by an NSNumber
mitz
Reported
2016-08-18 15:19:07 PDT
<
rdar://problem/27877735
> Currently API::Number objects are wrapped by WKObject, but that means that Objective-C clients can’t see their value. Patch forthcoming.
Attachments
Introduce WKNSNumber
(20.42 KB, patch)
2016-08-18 15:31 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2016-08-18 15:31:10 PDT
Created
attachment 286403
[details]
Introduce WKNSNumber
WebKit Commit Bot
Comment 2
2016-08-18 15:33:55 PDT
Attachment 286403
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/Cocoa/WKNSNumber.h:35: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2016-08-18 16:12:57 PDT
Fixed in <
https://trac.webkit.org/r204614
>.
Hunseop Jeong
Comment 4
2016-08-18 19:49:35 PDT
Fix CMake build after
r204614
Committed
r204625
: <
http://trac.webkit.org/changeset/204625
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug